---
source: lexer/lib.rs
expression: token_vs
---
[
    LET,
    IDENTIFIER(
        "five",
    ),
    ASSIGN,
    INT(
        5,
    ),
    SEMICOLON,
    LET,
    IDENTIFIER(
        "ten",
    ),
    ASSIGN,
    INT(
        10,
    ),
    SEMICOLON,
    LET,
    IDENTIFIER(
        "add",
    ),
    ASSIGN,
    FUNCTION,
    LPAREN,
    IDENTIFIER(
        "x",
    ),
    COMMA,
    IDENTIFIER(
        "y",
    ),
    RPAREN,
    LBRACE,
    IDENTIFIER(
        "x",
    ),
    PLUS,
    IDENTIFIER(
        "y",
    ),
    SEMICOLON,
    RBRACE,
    SEMICOLON,
    LET,
    IDENTIFIER(
        "result",
    ),
    ASSIGN,
    IDENTIFIER(
        "add",
    ),
    LPAREN,
    IDENTIFIER(
        "five",
    ),
    COMMA,
    IDENTIFIER(
        "ten",
    ),
    RPAREN,
    SEMICOLON,
    BANG,
    MINUS,
    SLASH,
    ASTERISK,
    INT(
        5,
    ),
    SEMICOLON,
    INT(
        5,
    ),
    LT,
    INT(
        10,
    ),
    GT,
    INT(
        5,
    ),
    SEMICOLON,
    IF,
    LPAREN,
    INT(
        5,
    ),
    LT,
    INT(
        10,
    ),
    RPAREN,
    LBRACE,
    RETURN,
    TRUE,
    SEMICOLON,
    RBRACE,
    ELSE,
    LBRACE,
    RETURN,
    FALSE,
    SEMICOLON,
    RBRACE,
    INT(
        10,
    ),
    EQ,
    INT(
        10,
    ),
    SEMICOLON,
    INT(
        10,
    ),
    NotEq,
    INT(
        9,
    ),
    SEMICOLON,
    EOF,
]
